--- a/styles/page.css
+++ b/styles/page.css
@@ -27,17 +27,13 @@
 /* PERSONALITY */
 #header{
     background-color: white;
-    border-bottom: 1.5px solid black;
-}
-#editor{
-    background-color: lightgray;
+    box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
 }
 #preview{
     background-color: white;
-    border: solid black 1.5px;
 }
 body{
-    background-color: #e5e5e5;
+    background-color: #d4d4d4;
 }
 
 
