--- a/styles/preview.css
+++ b/styles/preview.css
@@ -106,6 +106,11 @@ table{
 .title-table-cell{
     border: 0;
 }
+.sub-table-cell{
+    line-height: 12pt;
+    font-size: 10pt;
+    height: 12pt;
+}
 .line{
     font-family: 'Times New Roman', Times, serif;
     font-size: 14pt;
